Upgrade to JAVA 11.0.8