@@ -9,6 +9,23 @@ Builds a directory `runtime` with just the pieces needed for `java.base` and `ja
 
 # Building Java 11 Under KM
 
+# Keeping up with OpenJDK Releases
+
+Since we use own Java binaries, it is important that we keep up to date on releases.
+
+What's current is documented in the JDK 11 release notes: https://www.oracle.com/java/technologies/javase/11all-relnotes.html.
+
+# Controlling Java Release Sizes
+
+Modern JDK's don't come with a separate JRE anymore. The come with `jlink` which builds a Java runtime directory with a specified set of components. For example:
+```
+jlink --no-headers-files --no-man-pages --compress=2 --add-modules java.base,java.logging --output runtime
+```
+
+Builds a directory `runtime` with just the pieces needed for `java.base` and `java.logging`, resulting in a substantial space savings.
+
+# Building Java 11 Under KM
+
 Run `make -C payloads/java fromsrc` to get and build Java. This builds OpenJDK in  `payloads/java/(jdk-11.0.6+10)`. See `payloads/java/Makefile` for details.
 
 The KM version of the java interpreter is `payloads/java/jdk-11.0.6+10/build/linux-x86_64-normal-server-release/images/jdk/bin/java.kmd`. To run it:
